# user-manager

./: Dockerfile  README.md  docker-compose.yml  example-servant-persistent.cabal  package.yaml  stack.yaml  user-manager.cabal
config/: development.properties  test.properties
exe/: Main.hs
src/: Api.hs  App.hs  Context.hs  Database.hs  DbConnection.hs  Foundation.hs  Logger.hs  Models.hs
src/API/: User.hs
src/App/: App.hs  Context.hs  Foundation.hs  Logger.hs
src/Database/: Connection.hs  MongoDbService.hs
src/Error/: Constants.hs  ErrorTypes.hs  Middleware.hs  Types.hs  Utils.hs
src/Model/: User.hs
src/Query/: User.hs
src/Repo/: User.hs
src/Service/: MongoDbManager.hs  UserManager.hs
src/Types/: User.hs
src/User/: User.hs  UserApi.hs  UserRepository.hs  UserService.hs  UserTypes.hs
test/: MockApp.hs  Utils.hs
test/API/: UserSpec.hs  Utils.hs
test/Service/: UserManagerSpec.hs
test/User/: UserApiSpec.hs  UserServiceSpec.hs
