name:                example-servant-persistent
version:             0.1.0.0
synopsis:            example with persistent and servant
description:         Simple example to illustrate how to use persistent and servant in combination.
license:             BSD3
license-file:        LICENSE
author:              James M.C. Haver II, Sönke Hahn
maintainer:          mchaver@gmail.com, SoenkeHahn@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example-servant-persistent
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
                     , Context
  build-depends:       base >=4.9 && <5
                     , aeson
                     , mtl
                     , lens
                     , mongoDB
                     , unliftio
                     , persistent
                     , persistent-mongoDB
                     , template-haskell
                     , servant
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-middleware-prometheus
                     , prometheus-client
                     , prometheus-metrics-ghc
                     , warp
                     , conferer
                     , conferer-warp
                     , co-log
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-T -Wall